# AbsolutOrdor

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: .gitignore  .~lock.input.csv#  CMakeLists.txt
src/C/: struct.c  structure_processeur.h
src/C/Algo/: sfj.c  sjf.c  sjf.h
src/C/Core/: AlgoController.h  csv_reader.c  csv_reader.h  data.c  data.h  liste.c  liste.h  liste_generique.c  liste_generique.h  liste_tq.c  liste_tq.h  processus.c  processus.h  resultat.c  resultat.h  structure.h
src/C/structure2donnees/: struct.c  structure_processeur.h  test_struct.c
src/Tests/: Test_Algo.cpp  Test_CSV.cpp  Test_Core.cpp  Test_Inline.cpp  Test_Liste.cpp  Test_ListeTQ.cpp  Test_Processus.cpp  Test_Timeline.cpp  input.csv
src/cli/: ConsoleStructPrinter.cpp  ConsoleStructPrinter.h  MainCli.cpp  MainCli.h  main.cpp
src/core/data/struct/: ExecutionTimeline.c  ExecutionTimeline.h  ProcessusIterator.c  ProcessusIterator.h  file.c  file.h  liste.c  liste.h  liste_tq.c  liste_tq.h  processus.c  processus.h  resultat.c  resultat.h
src/core/process/: AlgoController.cpp  AlgoController.h
src/core/process/Algo/: algo_commun.c  algo_commun.h  fifo.c  fifo.h  lottery_scheduling.c  lottery_scheduling.h  rrn.c  rrn.h  sfj.c  sjf.c  sjf.h  sjrf.c  sjrf.h
src/core/process/utilities/: TimelineStatsCalculator.c  TimelineStatsCalculator.h  csv_reader.c  csv_reader.h  csv_writer.cpp  csv_writer.h  string_parser.cpp  string_parser.h
src/docs/: Doxyfile.in
src/gui/: ExecutionTimelineSequencer.cpp  ExecutionTimelineSequencer.h  MainGUI.cpp  MainGUI.h  MainGui.h  main.cpp
src/libs/imGuiFileDialog/: CMakeLists.txt
src/libs/imgui/: CMakeLists.txt
src/libs/imsequencer/: CMakeLists.txt
test/: main.c  mainSJF.c
